--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "lint-fix": "eslint --fix ."
   },
   "dependencies": {
+    "bcrypt": "^4.0.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^8.2.0",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
-    "pg": "^7.18.2",
-    "dotenv": "^8.2.0"
+    "pg": "^7.18.2"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
