--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@sendgrid/mail": "^7.0.1",
     "bcrypt": "^4.0.1",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "cryptr": "^6.0.2",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
